import type { RenderResult } from '@testing-library/react';
import type { MenuIconProps } from './MenuIcon';
import { render } from '@testing-library/react';
import React from 'react';
import { MenuIcon } from './MenuIcon';

const baseProps: MenuIconProps = {
    isOpen: false,
    isVisible: false,
    onClick: jest.fn(),
};

const renderComponent = (newProps?: Partial<MenuIconProps>): RenderResult => {
    return render(<MenuIcon {...baseProps} {...newProps} />);
};

describe('<MenuIcon />', () => {
    it('renders properly', () => {
        const { container } = renderComponent();

        expect(container).toMatchSnapshot();
    });

    it('renders properly when menu is open', () => {
        const { container } = renderComponent({ isOpen: true });

        expect(container).toMatchSnapshot();
    });

    it('renders properly when the icon is visible is open', () => {
        const { container } = renderComponent({ isVisible: true });

        expect(container).toMatchSnapshot();
    });
});
